--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.JPG" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Graduated manual & automation QA software testing course, and software engineer certificate</h2>
