--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-				  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Netiv HaShayara Northe District, Israel, Zip code 2524500</span></li>
+				  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Netiv HaShayara Northe District, Israel, 2524500</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
 				  <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>rotemsh31s5@gmail.com</span></li>
                 </ul>
